--- a/index.html
+++ b/index.html
@@ -14,33 +14,38 @@
                 <div>Logo Dashboard</div>
             </div>
             <ul class="menuleft">
-                <li> <img src="" alt="Home"> Home</li>
-                <li> <img src="" alt="Profile">  Profile  </li>
-                <li> <img src="" alt="Messages">  Messages</li>
-                <li> <img src="" alt="History">  History  </li>
-                <li> <img src="" alt="Tasks">  Tasks  </li>
-                <li> <img src="" alt="Communities">  Communities  </li>
-                <li> <img src="" alt="Settings">  Settings  </li>
-                <li> <img src="" alt="Support">  Support      </li>
-                <li> <img src="" alt="Privacy">  Privacy      </li>
+                <li> <img src="/Icons/Home.svg" alt="Home"> Home</li>
+                <li> <img src="/Icons/Profile.svg" alt="Profile">  Profile  </li>
+                <li> <img src="/Icons/Messages.svg" alt="Messages">  Messages</li>
+                <li> <img src="/Icons/History.svg" alt="History">  History  </li>
+                <li> <img src="/Icons/Tasks.svg" alt="Tasks">  Tasks  </li>
+                <li> <img src="/Icons/Community.svg" alt="Communities">  Communities  </li>
+                <li class="space"> <img src="/Icons/Settings.svg" alt="Settings">  Settings  </li>
+                <li> <img src="/Icons/Support.svg" alt="Support">  Support      </li>
+                <li> <img src="/Icons/Security.svg" alt="Privacy">  Privacy      </li>
             </ul>
         </div>
         <div class="rightpanel">
             <div class="spacer"></div>
             <div class="header">
                 <div class="navbar">  
-                <img src="" alt="magnifying glass">
+                <img src="/Icons/Search.svg" alt="magnifying glass">
                 <input type="text" name="Search" id="Search" placeholder="Search">
                 </div>
-                <div>
-                    <img src="" alt="NotificationBell">
-                    <img src="" alt="Profilephoto">
+                <div class="profile">
+                    <div>
+                    <img src="/Icons/Bell.svg" alt="NotificationBell">
+                </div>                    <div>
+                    <img class="profilephoto" src="/ProfilePhoto.jpg" alt="Profilephoto">
+                </div>                    <div>
+
                     <h1>Bladymir Lombardo</h1>
+                    </div>
                 </div>    
             </div>
              <div class="usercontrol"> 
                 <div class="leftUC">
-                <img src="" alt="Profilephoto">
+                <img class="bigPhoto" src="/ProfilePhoto.jpg" alt="Profilephoto">
                     <h5>Hi There</h5>
                     <h1>Bladymir Lombardo (@Blady)</h1>
                 </div>
@@ -52,7 +57,7 @@
              </div>        
         <div class="maincontainer">
             <div class="maincontainerLeft"> 
-                <div class="mainheader1">
+                <div class="mainHeader">
                     Your Projects
                 </div>
 
@@ -61,43 +66,72 @@
                 <div class="project">
                     <div class="projectheader">Header</div>
                     <div class="projectinfo">Info</div>
-                    <div class="projectbuttons">Button1 Button2 Button3</div>
+                    <div class="projectbuttons">
+                        <img src="/Icons/Star.svg" alt="Star">
+                        <img src="/Icons/Hide.svg" alt="Hide">
+                        <img src="/Icons/Share.svg" alt="Share">
+
+                    </div>
                 </div>
                 <div class="project">
                     <div class="projectheader">Header</div>
                     <div class="projectinfo">Info</div>
-                    <div class="projectbuttons">Button1 Button2 Button3</div>
+                    <div class="projectbuttons">
+                        <img src="/Icons/Star.svg" alt="Star">
+                        <img src="/Icons/Hide.svg" alt="Hide">
+                        <img src="/Icons/Share.svg" alt="Share">
+                    </div>
                 </div>
                 <div class="project">
                     <div class="projectheader">Header</div>
                     <div class="projectinfo">Info</div>
-                    <div class="projectbuttons">Button1 Button2 Button3</div>
+                    <div class="projectbuttons">                 
+                        <img src="/Icons/Star.svg" alt="Star">
+                        <img src="/Icons/Hide.svg" alt="Hide">
+                        <img src="/Icons/Share.svg" alt="Share">
+</div>
                 </div>
                 <div class="project">
                     <div class="projectheader">Header</div>
                     <div class="projectinfo">Info</div>
-                    <div class="projectbuttons">Button1 Button2 Button3</div>
+                    <div class="projectbuttons">
+                        <img src="/Icons/Star.svg" alt="Star">
+                        <img src="/Icons/Hide.svg" alt="Hide">
+                        <img src="/Icons/Share.svg" alt="Share">
+
+                    </div>
                 </div>
                 <div class="project">
                     <div class="projectheader">Header</div>
                     <div class="projectinfo">Info</div>
-                    <div class="projectbuttons">Button1 Button2 Button3</div>
+                    <div class="projectbuttons">
+                        <img src="/Icons/Star.svg" alt="Star">
+                        <img src="/Icons/Hide.svg" alt="Hide">
+                        <img src="/Icons/Share.svg" alt="Share">
+
+                    </div>
                 </div>
                 <div class="project">
                     <div class="projectheader">Header</div>
                     <div class="projectinfo">Info</div>
-                    <div class="projectbuttons">Button1 Button2 Button3</div>
+                    <div class="projectbuttons">
+                        <img src="/Icons/Star.svg" alt="Star">
+                        <img src="/Icons/Hide.svg" alt="Hide">
+                        <img src="/Icons/Share.svg" alt="Share">
+
+                    </div>
                 </div>  
             </div>  
             </div>
-            <div class="mainright">
+<div class="mainright">
             
-    <div class="mainheader2">
+    <div class="announcement">
 
-                <div class="containerHeader">
+                <div class="mainHeader">
                     Your Projects
                 </div>
         <div class="announcementcontainer">
+            <div>
             <div class="Announcement1">
                 <div class="announcementHeader">Header</div>
                 <div class="announcementDescrip">Descript</div>
@@ -112,11 +146,37 @@
             </div>
         </div>
             </div>
-            <div class="trendingcontainer">
-                <div class="trendingHeader">Header</div>
-                <div class="trendingDescrip">Descript</div>    
-            </div>
+            
         </div>
+
+        <div class="trendingcontainer">
+            <div class="trendingHeader">Header</div>
+            <div class="trendingDescrip">
+                <div class="trending">
+                    <div class="trendingPhoto"> <img src="/ProfilePhoto.jpg" alt="Photo"> </div>
+                    <div class="trendingName">@Profile Name</div>
+                    <div class="trendingDescrip">This is a description</div>
+                </div>
+                <div class="trending">
+                    <div class="trendingPhoto"> <img src="/ProfilePhoto.jpg" alt="Photo"> </div>
+                    <div class="trendingName">@Profile Name</div>
+                    <div class="trendingDescrip">This is a description</div>
+                </div>
+                <div class="trending">
+                    <div class="trendingPhoto"> <img src="/ProfilePhoto.jpg" alt="Photo"> </div>
+                    <div class="trendingName">@Profile Name</div>
+                    <div class="trendingDescrip">This is a description</div>
+                </div>
+                <div class="trending">
+                    <div class="trendingPhoto"> <img src="/ProfilePhoto.jpg" alt="Photo"></div>
+                    <div class="trendingName">@Profile Name</div>
+                    <div class="trendingDescrip">This is a description</div>
+                </div>
+
+            </div>    
+        </div>
+
+
         </div>
         </div>
 
