--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             </ul>
         </div>
         <div class="rightpanel">
-            <div class="spacer"></div>
+            <div class="spacer">
+                <div class="blue"></div>
+                <div class="white"></div>
+            </div>
             <div class="header">
                 <div class="navbar">  
                 <img src="/Icons/Search.svg" alt="magnifying glass">
@@ -46,7 +49,7 @@
              <div class="usercontrol"> 
                 <div class="leftUC">
                 <img class="bigPhoto" src="/ProfilePhoto.jpg" alt="Profilephoto">
-                    <h5>Hi There</h5>
+                    <h5>Hi There,</h5>
                     <h1>Bladymir Lombardo (@Blady)</h1>
                 </div>
                 <div class="rightUC">
@@ -151,7 +154,7 @@
 
         <div class="trendingcontainer">
             <div class="trendingHeader">Header</div>
-            <div class="trendingDescrip">
+            <div class="trendingBody">
                 <div class="trending">
                     <div class="trendingPhoto"> <img src="/ProfilePhoto.jpg" alt="Photo"> </div>
                     <div class="trendingName">@Profile Name</div>
